# Back-end/api/swagger_output.json
@@ -129,18 +129,30 @@
         }
       }
     },
-    "/user/sef": {
+    "/user/self": {
       "get": {
         "tags": [
-          "User"
+          "Usuário"
         ],
         "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         },
         "security": [
@@ -622,65 +634,6 @@
         }
       }
     },
-    "/menu": {
-      "post": {
-        "tags": [
-          "Cardápio"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "diaSemana": {
-                    "example": "any"
-                  },
-                  "pratoComum": {
-                    "example": "any"
-                  },
-                  "pratoVegetariano": {
-                    "example": "any"
-                  },
-                  "acompanhamentos": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/menu/{diaSemana}": {
       "get": {
         "tags": [
@@ -703,6 +656,68 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Cardápio"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "diaSemana",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "acompanhamentos": {
+                    "example": "any"
+                  },
+                  "pratoComum": {
+                    "example": "any"
+                  },
+                  "pratoVegetariano": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
